# ml-benchmark-spategan

./: .gitignore  ADDING_NEW_MODELS.md  README.md  cleanup_integration_tests.sh  config.yml  config_integration_test.yml  pyproject.toml  run_integration_test.sh  submit_comparison.sh  submit_integration_test.sh  submit_training.sh  workflow.md
.github/ISSUE_TEMPLATE/: ml_benchmark_submission.yaml
analysis/: compare_models.py  model_loader.py
data/: README.md  data_download.ipynb  experiments.ipynb
evaluation/: README.md  diagnostics.py  indices.py  metrics.py
format_predictions/: README.md  format.py
format_predictions/templates/: pr_ALPS.nc  pr_NZ.nc  pr_SA.nc  tasmax_ALPS.nc  tasmax_NZ.nc  tasmax_SA.nc
requirements/: environment.yaml
src/ml_benchmark_spategan/analysis/: __init__.py  __main__.py  compare_models.py  data_utils.py  model_loader.py
src/ml_benchmark_spategan/config/: config.py
src/ml_benchmark_spategan/dataloader/: dataloader.py
src/ml_benchmark_spategan/model/: base.py  deepesd.py  registry.py  spagan2d.py  unet2d.py
src/ml_benchmark_spategan/model/discriminators/: __init__.py  spategan_disc.py
src/ml_benchmark_spategan/training/: __main__.py  lr_scheduler.py  training.py
src/ml_benchmark_spategan/utils/: denormalize.py  interpolate.py  losses.py  normalize.py
src/ml_benchmark_spategan/visualization/: plot_results.py  plot_train.py
training/: README.md  compare_diagnostics.py  evaluate_and_compare.py  summarize_runs.py  training.ipynb  training.py  training_v2.ipynb  training_v2.py
(+7 files in other folders)
